--- a/assets/css/src/_nav_secondary_inc.css
+++ b/assets/css/src/_nav_secondary_inc.css
@@ -69,6 +69,7 @@
 			margin: auto 1rem;
 			text-align: center;
 			direction: rtl;
+			place-items: center;
 			& li {
 				font-size: .8rem;
 				padding-top: .1rem;
