--- a/assets/css/src/_pages.css
+++ b/assets/css/src/_pages.css
@@ -1,9 +1,18 @@
 .page {
 	& main#primary {
-    margin-top: 0rem;
+    margin-top: 4rem;
 	position: relative;
 	@media (--content-query) {
-	margin-top: 0rem;
+	margin-top: -7rem;
 	}
 }
+}
+.home.page {
+	& main#primary {
+		margin-top: 0;
+		position: relative;
+		@media (--content-query) {
+		margin-top: -7rem;
+		}
+	}
 }
